--- a/index-with-redbubble.html
+++ b/index-with-redbubble.html
@@ -66,3 +66,8 @@
   </footer>
 </body>
 </html>
+<!-- Redbubble Embed -->
+<script type="text/javascript" src="https://www.redbubble.com/assets/external_portfolio.js"></script>
+<script id="rb-xzfcxvzx" type="text/javascript">
+  new RBExternalPortfolio('www.redbubble.com', 'novasa', 3, 4).renderIframe();
+</script>
