--- a/index-with-redbubble.html
+++ b/index-with-redbubble.html
@@ -22,52 +22,35 @@
       margin: 0;
       font-size: 2.5rem;
     }
-    .social {
-      margin-top: 10px;
-    }
-    .social a {
-      margin: 0 10px;
-      color: #fff;
-      text-decoration: none;
-    }
     main {
       padding: 40px 20px;
     }
     footer {
       background-color: #000;
       color: #fff;
-      padding: 10px;
-      position: fixed;
-      width: 100%;
-      bottom: 0;
+      padding: 20px 0;
+      margin-top: 40px;
     }
   </style>
-  <script type="text/javascript" src="https://www.redbubble.com/assets/external_portfolio.js"></script>
 </head>
 <body>
+
   <header>
-    <h1>NovaSA</h1>
-    <div class="social">
-      <a href="https://instagram.com/souzandhaini" target="_blank">Instagram</a>
-      <a href="https://facebook.com/souzandhaini" target="_blank">Facebook</a>
-      <a href="https://tiktok.com/@souzandhaini.1" target="_blank">TikTok</a>
-    </div>
+    <h1>Welcome to NovaSA</h1>
   </header>
+
   <main>
-    <h2>Welcome to NovaSA!</h2>
-    <p>Discover unique designs and inspiring creativity.</p>
-    <div id="redbubble-portfolio"></div>
+    <p>Check out my designs on Redbubble!</p>
+    <!-- Redbubble Embed -->
+    <script type="text/javascript" src="https://www.redbubble.com/assets/external_portfolio.js"></script>
     <script id="rb-xzfcxvzx" type="text/javascript">
       new RBExternalPortfolio('www.redbubble.com', 'novasa', 3, 4).renderIframe();
     </script>
   </main>
+
   <footer>
-    &copy; 2025 NovaSA. All rights reserved.
+    <p>&copy; 2025 NovaSA</p>
   </footer>
+
 </body>
 </html>
-<!-- Redbubble Embed -->
-<script type="text/javascript" src="https://www.redbubble.com/assets/external_portfolio.js"></script>
-<script id="rb-xzfcxvzx" type="text/javascript">
-  new RBExternalPortfolio('www.redbubble.com', 'novasa', 3, 4).renderIframe();
-</script>
