--- a/index-with-redbubble.html
+++ b/index-with-redbubble.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NovaSA – Home</title>
+  <title>NovaSA – Redbubble Designs</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -41,9 +40,9 @@
 
   <main>
     <p>Check out my designs on Redbubble!</p>
-    <!-- Redbubble Embed -->
+    
     <script type="text/javascript" src="https://www.redbubble.com/assets/external_portfolio.js"></script>
-    <script id="rb-xzfcxvzx" type="text/javascript">
+    <script type="text/javascript">
       new RBExternalPortfolio('www.redbubble.com', 'novasa', 3, 4).renderIframe();
     </script>
   </main>
