--- a/index.html
+++ b/index.html
@@ -1,2 +1,55 @@
-# novasa.github.io-
-My official portfolio of NovaSA designs.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>NovaSA – Redbubble Designs</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #fff;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+    header {
+      background-color: #000;
+      color: #fff;
+      padding: 20px 0;
+    }
+    h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+    main {
+      padding: 40px 20px;
+    }
+    footer {
+      background-color: #000;
+      color: #fff;
+      padding: 20px 0;
+      margin-top: 40px;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Welcome to NovaSA</h1>
+  </header>
+
+  <main>
+    <p>Check out my designs on Redbubble!</p>
+    
+    <script type="text/javascript" src="https://www.redbubble.com/assets/external_portfolio.js"></script>
+    <script type="text/javascript">
+      new RBExternalPortfolio('www.redbubble.com', 'novasa', 3, 4).renderIframe();
+    </script>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 NovaSA</p>
+  </footer>
+
+</body>
+</html>
