--- a/index.html
+++ b/index.html
@@ -39,7 +39,23 @@
   </header>
 
   <main>
-    <p>Check out my designs on Redbubble!</p>
+    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; padding: 20px;">
+  <!-- التصميم الأول -->
+  <div>
+    <a href="https://www.redbubble.com/people/novasa/shop" target="_blank">
+      <img src="https://via.placeholder.com/300x300.png?text=Your+Love+Ruins+Me" alt="Your Love Ruins Me in the Sweetest Way" style="width: 300px; height: 300px; object-fit: cover; border-radius: 10px;">
+    </a>
+    <p style="text-align: center;">Your Love Ruins Me in the Sweetest Way</p>
+  </div>
+
+  <!-- التصميم الثاني -->
+  <div>
+    <a href="https://www.redbubble.com/people/novasa/shop" target="_blank">
+      <img src="https://via.placeholder.com/300x300.png?text=Built+from+Silence+and+Fire" alt="Built from Silence and Fire – Strength Through Contrast" style="width: 300px; height: 300px; object-fit: cover; border-radius: 10px;">
+    </a>
+    <p style="text-align: center;">Built from Silence and Fire – Strength Through Contrast</p>
+  </div>
+</div>
     
     <script type="text/javascript" src="https://www.redbubble.com/assets/external_portfolio.js"></script>
     <script type="text/javascript">
